// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render a primary button 1`] = `
.c0 {
  font-size: 14px;
  height: 50px;
  font-weight: 600;
  padding: 0 45px;
  text-rendering: geometricPrecision;
  line-height: inherit;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: top;
  cursor: pointer;
  background: #0074c8;
  color: #fff;
  border: 1px solid #0074c8;
  border-radius: 5px;
  -webkit-transition: background-color 0.2s ease,border-color 0.2s ease;
  transition: background-color 0.2s ease,border-color 0.2s ease;
}

.c0:hover,
.c0:focus {
  background-color: #0065ad;
  border-color: #0065ad;
}

<button
  className="c0"
>
  Primary
</button>
`;

exports[`Button should render a secondary button 1`] = `
.c0 {
  font-size: 14px;
  height: 50px;
  font-weight: 600;
  padding: 0 45px;
  text-rendering: geometricPrecision;
  line-height: inherit;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: top;
  cursor: pointer;
  background: #e0e1e2;
  color: #888787;
  border: 1px solid #e0e1e2;
  border-radius: 5px;
  -webkit-transition: background-color 0.2s ease,border-color 0.2s ease;
  transition: background-color 0.2s ease,border-color 0.2s ease;
}

.c0:hover,
.c0:focus {
  background-color: #cacbcd;
  border-color: #cacbcd;
}

<button
  className="c0"
>
  Secondary
</button>
`;
